--- a/helm/minio/values.yaml
+++ b/helm/minio/values.yaml
@@ -77,5 +77,7 @@ secret:
 sampleFileUpload:
   enabled: false
   bucket: documents
-  urls: []
- 
+  urls: 
+  - https://raw.githubusercontent.com/rh-ai-kickstart/RAG/refs/heads/main/notebooks/Zippity_Zoo_Grand_Invention.pdf
+  - https://raw.githubusercontent.com/rh-ai-kickstart/RAG/refs/heads/main/notebooks/Zippity_Zoo_and_the_Town_of_Tumble_Town.pdf
+  - https://raw.githubusercontent.com/rh-ai-kickstart/RAG/refs/heads/main/notebooks/Zippity_Zoo_and_the_Town_of_Whispering_Willows.pdf
